Tried fixing login background and menu collapse on mobile

--- a/css/login.css
+++ b/css/login.css
@@ -6,6 +6,22 @@ body
     margin: 0;
 }
 
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url('../images/client_background/background.jpg') no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .accounterror
 {
     color: rgb(219, 141, 13);
